<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activity.UserFragment">

    <TextView
        android:id="@+id/username_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_usernames"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/email_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/username_info"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/username_info"
        app:layout_constraintTop_toBottomOf="@+id/username_info"
        app:layout_constraintVertical_bias="0.068" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="181dp"
        android:layout_height="169dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/avatardefault_92824"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/avatar_image" />

    <ImageView
        android:id="@+id/envelope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@android:drawable/sym_action_email"
        app:layout_constraintBottom_toBottomOf="@+id/email_info"
        app:layout_constraintEnd_toStartOf="@+id/email_info"
        app:layout_constraintTop_toTopOf="@+id/email_info"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/envelope" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_info"
        app:layout_constraintVertical_bias="0.748" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>