<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/error_warning_message_login"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextEditLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextEditLogin" />

    <ImageView
        android:id="@+id/cross_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/passwordTextEditLogin"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextEditLogin"
        app:layout_constraintTop_toTopOf="@+id/passwordTextEditLogin"
        app:srcCompat="@android:drawable/ic_delete"
        android:contentDescription="@string/cross" />

    <ImageView
        android:id="@+id/cross_username_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/usernameTextEditLogin"
        app:layout_constraintEnd_toEndOf="@+id/usernameTextEditLogin"
        app:layout_constraintTop_toTopOf="@+id/usernameTextEditLogin"
        app:srcCompat="@android:drawable/ic_delete"
        android:contentDescription="@string/cross" />

    <EditText
        android:id="@+id/usernameTextEditLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_usernames"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessageLogin"
        android:autofillHints="" />

    <TextView
        android:id="@+id/welcomeMessageLogin"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_welcome"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordTextEditLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextEditLogin"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextEditLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>