<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activity.ResetPasswordActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <TextView
        android:id="@+id/error_warning_message_reset"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat_reset" />

    <ImageView
        android:id="@+id/cross_password_reset_password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cross"
        app:layout_constraintBottom_toBottomOf="@+id/password_repeat_reset"
        app:layout_constraintEnd_toEndOf="@+id/password_repeat_reset"
        app:layout_constraintTop_toTopOf="@+id/password_repeat_reset"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/cross_password_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cross"
        app:layout_constraintBottom_toBottomOf="@+id/password_password_reset"
        app:layout_constraintEnd_toEndOf="@+id/password_password_reset"
        app:layout_constraintTop_toTopOf="@+id/password_password_reset"
        app:srcCompat="@android:drawable/ic_delete" />

    <EditText
        android:id="@+id/password_password_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="false"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_repeat_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/repeat_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:autofillHints="false"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_password_reset" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat_reset"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>